--- a/viajesch/index.html
+++ b/viajesch/index.html
@@ -29,9 +29,9 @@
 </head>
 
 <body id="ColorFondo">
+    <header>
+        <div id="seccion1">
 
-    <div id="seccion1">
-        <header>
             <!-- Navbar content -->
             <nav id="transparencia" class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container" class="text-center">
@@ -55,25 +55,25 @@
 
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: #050505;">
+                                <a class="nav-link" href="#" style="color: #ffffff;">
                                     Inicio
                                 </a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: #050505;">
+                                <a class="nav-link" href="#" style="color: #ffffff;">
                                     Recetas
                                 </a>
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link " href="#" style="color: #050505;">
+                                <a class="nav-link " href="#" style="color: #ffffff;">
                                     Nosotros
                                 </a>
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link " href="#" style="color: #050505;">
+                                <a class="nav-link " href="#" style="color: #ffffff;">
                                     Contacto
                                 </a>
                             </li>
@@ -83,35 +83,40 @@
                     </ul>
                 </div>
             </nav>
-    </div>
-
-    <!--carrusel init-->
-    <div id="imagescar" class="col-12 col-lg-12">
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-    </div>
 
-    <!--carrusel fin-->
-    <H1 class="text-center">¿QUIÉNES SOMOS? </H1>
+        <!--carrusel init-->
+        <div id="imagescar" class="col-12 col-lg-12">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <H1 id="Quienes" class="text-center">¿QUIÉNES SOMOS? </H1>
+        </div>
+
+        <!--carrusel fin-->
+
+        <br>
+        <br>
 
     </header>
 
@@ -130,8 +135,8 @@
                                         style="color: #000000;"></i></h3>
                             </li>
                         </ul>
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #000000;">
+                            <p class="card-text" style="color: #ffffff;">
                                 Encuentra excelentes promociones para recorrer Chile con descuentos.
                                 Ten todo listo antes de subir al avión y reserva ya mismo las mejores
                                 ofertas para comenzar a hacer recuerdos que atesorarás toda la vida.
@@ -144,8 +149,8 @@
                 <div class="col-12 col-lg-4">
                     <div class="card" style="width: 18rem;">
 
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #000000;">
+                            <p class="card-text" style="color: #ffffff;">
                                 Pichilemu no sólo es reconocido por la belleza y tranquilidad que ofrece a los
                                 visitantes, sino que también por las excelentes condiciones de viento y oleaje,
                                 que lo convierten en el mejor lugar para surfistas nuevos y experimentados.
@@ -168,8 +173,8 @@
                                         style="color: #000000;"></i></h3>
                             </li>
                         </ul>
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #000000;">
+                            <p class="card-text" style="color: #ffffff;">
                                 En nuestro país existe una fauna enorme y diversa, podrás encontrar animales tan
                                 curiosos
                                 como La rana de Darwin que fue descubierta por el mismísimo Charles Darwin e incluso
@@ -180,7 +185,8 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <H3 class="text-center">DESTACADOS </H3>
     </section>
 
     <section id="TarjetasFotos">
@@ -191,8 +197,8 @@
                 <div class="col-12 col-lg-3">
                     <div class="card" style="width: 18rem;">
                         <img src="./assets/img/card1.jpg" class="card-img-top" alt="pescados" height="230px">
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #1e99af;">
+                            <p class="card-text" style="color: #ffffff;">
                                 Encuentra excelentes promociones para recorrer Chile con descuentos.
                                 Ten todo listo antes de subir al avión y reserva ya mismo las mejores
                                 ofertas para comenzar a hacer recuerdos que atesorarás toda la vida.
@@ -204,8 +210,8 @@
                 <div class="col-12 col-lg-3">
                     <div class="card" style="width: 18rem;">
                         <img src="./assets/img/card2.jpg" class="card-img-top" alt="pescados" height="230px">
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #1e99af;">
+                            <p class="card-text" style="color: #ffffff;">
                                 Pichilemu no sólo es reconocido por la belleza y tranquilidad que ofrece a los
                                 visitantes, sino que también por las excelentes condiciones de viento y oleaje,
                                 que lo convierten en el mejor lugar para surfistas nuevos y experimentados.
@@ -217,8 +223,8 @@
                 <div class="col-12 col-lg-3">
                     <div class="card" style="width: 18rem;">
                         <img src="./assets/img/card3.jpg" class="card-img-top" alt="pescados" height="230px">
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #1e99af;">
+                            <p class="card-text" style="color: #ffffff;">
                                 En nuestro país existe una fauna enorme y diversa, podrás encontrar animales tan
                                 curiosos
                                 como La rana de Darwin que fue descubierta por el mismísimo Charles Darwin e incluso
@@ -231,8 +237,8 @@
                 <div class="col-12 col-lg-3">
                     <div class="card" style="width: 18rem;">
                         <img src="./assets/img/card4.jpg" class="card-img-top" alt="pescados" height="230px">
-                        <div class="card-body">
-                            <p class="card-text">
+                        <div class="card-body" style="background-color: #1e99af;">
+                            <p class="card-text" style="color: #ffffff;">
                                 Pichilemu no sólo es reconocido por la belleza y tranquilidad que ofrece a los
                                 visitantes, sino que también por las excelentes condiciones de viento y oleaje,
                                 que lo convierten en el mejor lugar para surfistas nuevos y experimentados.
@@ -242,7 +248,8 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <H3 class="text-center">CONTACTO </H3>
     </section>
 
 
@@ -269,15 +276,25 @@
             </div>
             <br>
             <br>
-            <div class="final">
+            <div id="final" >
+                    <div class="row">
+                        
+                            <h3 class="col-12 col-lg-6  text-center" style="color: #ffffff; background-color: #1e99af; "  >
+                                Viajes Chile
 
-                <i class="fa-brands fa-instagram" style="color: #ffffff;"></i> <!-- logo -->
-                <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i> <!-- logo -->
-                <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i> <!-- logo -->
-                <i class="fa-brands fa-tiktok" style="color: #ffffff;"></i> <!-- logo -->
+                            </h3>
+                            <h3 class="col-12 col-lg-6 text-center" style="background-color: #1e99af;" >
+                                <i class="fa-brands fa-instagram" style="color: #ffffff;"></i> <!-- logo -->
+                                <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i> <!-- logo -->
+                                <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i> <!-- logo -->
+                                <i class="fa-brands fa-tiktok" style="color: #ffffff;"></i> <!-- logo -->
+                            </h3>
+                        
+                    </div>
+                </div>
     </footer>
 
-    </div>
+
 
     <!--Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
