--- a/viajesch/index.html
+++ b/viajesch/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <!--carrusel init-->
-        <div id="imagescar" class="col-12 col-lg-12">
+        <div id="imagescar" class="col-12 col-lg-12 ">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -121,19 +121,20 @@
         </div>
 
         <!--carrusel fin-->
-
+        <div class="text-center">
+            <H1 id="Quienes" text-center">¿QUIENES SOMOS? </H1>
+        </div>
         <br>
         <br>
 
     </header>
-    <H1 id="Quienes" class="text-center">¿QUIÉNES SOMOS? </H1>
 
     <section id="TarjetasTexto">
         <div id="cont1" class="container">
             <div class="row">
 
                 <!-- tarjeta1 -->
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4 ">
                     <div class="card" style="width: 18rem;">
 
                         <ul class="list-group list-group-flush">
@@ -194,7 +195,9 @@
         </div>
         <br>
         <br>
+        <div class="text-center">
         <H3 class="text-center">DESTACADOS </H3>
+    </div>
     </section>
 
     <section id="TarjetasFotos">
